--- a/xcov31_telescopes.html
+++ b/xcov31_telescopes.html
@@ -35,20 +35,25 @@
 									<tr><td>Haleakala 2-meter, Las Cumbres Observatory (LCO) global telescope network</td><td>Infrared</td><td>Haleakala, Hawaii, USA</td></tr>
 									<tr><td>Gemini South</td><td>Infrared</td><td>Cerro Tololo Inter-American Observatory (CTIO), Chile</td></tr>
 									<tr><td>Mt. Cuba Observatory (MCAO)</td><td>Optical</td><td>Wilmington, Delaware, USA</td></tr>
-									<tr><td>Teide 1-meter, LCO</td><td>Optical</td><td>Tenerife, Spain</td></tr>
-									<tr><td>McDonald 1-meter, LCO</td><td>Optical</td><td>Fort Davis, Texas, USA</td></tr>
-									<tr><td>CTIO 1-meter, LCO</td><td>Optical</td><td>CTIO, Chile</td></tr>
-									<tr><td>Kitt Peak 0.9-meter (KP), Southeastern Association for Research in Astronomy (SARA)</td><td>Optical</td><td>Tuscon, Arizona, USA</td></tr>
-									<tr><td>CTIO 0.6-meter, SARA</td><td>Optical</td><td>CTIO, Chile</td></tr>
-									<tr><td>Roque de los Muchachos 1-meter (RM), SARA</td><td>Optical</td><td>La Palma, Spain</td></tr>
-									<tr><td>2.1-meter, McDonald Observatory</td><td>Optical</td><td>Fort Davis, Texas, USA</td></tr>
+									<tr><td>ERAU 1m</td><td>Optical</td><td>Daytona Beach, Florida, USA</td></tr>
+									<tr><td>Baker Observatory</td><td>Optical</td><td>Fair Grove, Missouri, USA</td></tr>
 									<tr><td>Paul and Jane Meyer Observatory (PJMO)</td><td>Optical</td><td>Valley Mills, Texas, USA</td></tr>
+									<tr><td>2.1-meter, McDonald Observatory</td><td>Optical</td><td>Fort Davis, Texas, USA</td></tr>
+									<tr><td>McDonald 1-meter, LCO</td><td>Optical</td><td>Fort Davis, Texas, USA</td></tr>
 									<tr><td>Steward Observatory</td><td>Optical</td><td>Tucson, Arizona, USA</td></tr>
-									<tr><td>Large Array Survey Telescope (LAST)</td><td>Optical</td><td>Kibbutz Neot Smadar, Israel</td></tr>
+									<tr><td>Kitt Peak 0.9-meter (KP), Southeastern Association for Research in Astronomy (SARA)</td><td>Optical</td><td>Tuscon, Arizona, USA</td></tr>
 									<tr><td>University of Hawaii 2.2 meter</td><td>Optical</td><td>Muana Kea, Hawaii, USA</td></tr>
-									<tr><td>Pico dos Dias Observatory (OPD)</td><td>Optical</td><td>Itajuba, Brazil</td></tr>
+									<tr><td>Amagi Observatory</td><td>Optical</td><td>Amagi, Japan</td></tr>
+									<tr><td>Large Array Survey Telescope (LAST)</td><td>Optical</td><td>Kibbutz Neot Smadar, Israel</td></tr>
+									<tr><td>Mt. Suhora Astronomical Observatory</td><td>Optical</td><td>Koninki, Poland</td></tr>
+									<tr><td>Krakow 0.5m</td><td>Optical</td><td>Krakow, Poland</td></tr>
 									<tr><td>Piszkéstető Observatory</td><td>Optical</td><td>Mátraszentimre, Hungary</td></tr>
-									<tr><td>Amagi Telescope</td><td>Optical</td><td>Amagi, Japan</td></tr>
+									<tr><td>Teide 1-meter, LCO</td><td>Optical</td><td>Tenerife, Spain</td></tr>
+									<tr><td>Roque de los Muchachos 1-meter (RM), SARA</td><td>Optical</td><td>La Palma, Spain</td></tr>
+									<tr><td>Pico dos Dias Observatory (OPD)</td><td>Optical</td><td>Itajuba, Brazil</td></tr>
+									<tr><td>CTIO 0.6-meter, SARA</td><td>Optical</td><td>CTIO, Chile</td></tr>
+									<tr><td>CTIO 1-meter, LCO</td><td>Optical</td><td>CTIO, Chile</td></tr>
+									
 								</table></p>
 								
 							</section>
