--- a/xcov31_collaborators.html
+++ b/xcov31_collaborators.html
@@ -30,7 +30,9 @@
 								<p>Collaborators helping with this WET campaign.
 								<table>
 									<tr><th>Name</th><th>Affliation</th></tr>
-									<tr><td>National Astronomical Observatory San Pedro Martir (OAN-SPM)</td><td>Infrared</td></tr>
+									<tr><td>Steven Savery</td><td>University of Delaware</td></tr>
+									<tr><td>Kaylee Grace</td><td>University of Delaware</td></tr>
+									<tr><td>Millie Dill</td><td>University of Delaware</td></tr>
 									
 									
 								</table></p>
