--- a/xcov31_collaborators.html
+++ b/xcov31_collaborators.html
@@ -41,6 +41,11 @@
 									<tr><td>Scot Kleinman</td><td>Industry</td></tr>
 									<tr><td>Nicholas Ballering</td><td>Space Science Institute and the University of Virginia</td></tr>
 									<tr><td>Kate Su</td><td>Space Science Institute</td></tr>
+									<tr><td>Ted von Hippel</td><td>Embry-Riddle Aeronautical University</td></tr>
+									<tr><td>Mike Montegomery</td><td>University of Texas at Austin</td></tr>
+									<tr><td>Barbara Castanheira</td><td>Baylor University</td></tr>
+									<tr><td>Barbara Castanheira</td><td>Baylor University</td></tr>
+									<tr><td>Barbara Castanheira</td><td>Baylor University</td></tr>
 									
 								</table></p>
               
