--- a/xcov31_collaborators.html
+++ b/xcov31_collaborators.html
@@ -44,8 +44,9 @@
 									<tr><td>Ted von Hippel</td><td>Embry-Riddle Aeronautical University</td></tr>
 									<tr><td>Mike Montegomery</td><td>University of Texas at Austin</td></tr>
 									<tr><td>Barbara Castanheira</td><td>Baylor University</td></tr>
-									<tr><td>Barbara Castanheira</td><td>Baylor University</td></tr>
-									<tr><td>Barbara Castanheira</td><td>Baylor University</td></tr>
+									<tr><td>Rudy Morales</td><td>Baylor University</td></tr>
+									<tr><td>Tony Fedi</td><td>Baylor University</td></tr>
+									<tr><td>Elizabeth Green</td><td>University of Arizona and Steward Observatory</td></tr>
 									
 								</table></p>
               
