--- a/xcov31_collaborators.html
+++ b/xcov31_collaborators.html
@@ -47,6 +47,8 @@
 									<tr><td>Rudy Morales</td><td>Baylor University</td></tr>
 									<tr><td>Tony Fedi</td><td>Baylor University</td></tr>
 									<tr><td>Elizabeth Green</td><td>University of Arizona and Steward Observatory</td></tr>
+									<tr><td>Mukremin Kilic</td><td>University of Oklahoma</td></tr>
+									<tr><td>Lester Fox Machado</td><td>Instituto de Astronomi&#769a de la Universidad Nacional Auto&#769noma de Me&#769xico</td></tr>
 									
 								</table></p>
               
