--- a/xcov31_collaborators.html
+++ b/xcov31_collaborators.html
@@ -50,7 +50,11 @@
 									<tr><td>Mukremin Kilic</td><td>University of Oklahoma</td></tr>
 									<tr><td>Lester Fox Machado</td><td>Instituto de Astronomi&#769a de la Universidad Nacional Auto&#769noma de Me&#769xico</td></tr>
 									<tr><td>Carolina Carbajal Quinata</td><td>Instituto de Astronomi&#769a de la Universidad Nacional Auto&#769noma de Me&#769xico</td></tr>
-									
+									<tr><td>Daniel Huber</td><td>University of Hawaii</td></tr>
+									<tr><td>Andrew Hoffman</td><td>University of Hawaii</td></tr>
+									<tr><td>Kyle Hart</td><td>University of Hawaii</td></tr>
+									<tr><td>Kouji Kyanagida</td><td>Amagi Observatory</td></tr>
+									<tr><td>Wen-Ping Chen</td><td>University of </td></tr>
 								</table></p>
               
 							</section>
