--- a/xcov31_collaborators.html
+++ b/xcov31_collaborators.html
@@ -53,8 +53,14 @@
 									<tr><td>Daniel Huber</td><td>University of Hawaii</td></tr>
 									<tr><td>Andrew Hoffman</td><td>University of Hawaii</td></tr>
 									<tr><td>Kyle Hart</td><td>University of Hawaii</td></tr>
-									<tr><td>Kouji Kyanagida</td><td>Amagi Observatory</td></tr>
-									<tr><td>Wen-Ping Chen</td><td>University of </td></tr>
+									<tr><td>Kouji Yanagida</td><td>Amagi Observatory</td></tr>
+									<tr><td>Wen-Ping Chen</td><td>National Central University</td></tr>
+									<tr><td>Xiaojun Jiang</td><td>National Astronomical Observatories, Chinese Academy of Sciences</td></tr>
+									<tr><td>Jiaqi Wang</td><td>National Astronomical Observatories, Chinese Academy of Sciences</td></tr>
+									<tr><td>Santosh Josi</td><td>ARIES, Aryabhatta Research Institute of Observational Sciences</td></tr>
+									<tr><td>Athul Dileep</td><td>ARIES, Aryabhatta Research Institute of Observational Sciences</td></tr>
+									<tr><td>S. Seetha</td><td>Raman Research Institute</td></tr>
+									<tr><td>S. Muneer</td><td>Indian Institute of Astrophysics, Bengaluru</td></tr>
 								</table></p>
               
 							</section>
