--- a/xcov31_collaborators.html
+++ b/xcov31_collaborators.html
@@ -61,6 +61,11 @@
 									<tr><td>Athul Dileep</td><td>ARIES, Aryabhatta Research Institute of Observational Sciences</td></tr>
 									<tr><td>S. Seetha</td><td>Raman Research Institute</td></tr>
 									<tr><td>S. Muneer</td><td>Indian Institute of Astrophysics, Bengaluru</td></tr>
+									<tr><td>Alexander Serebryanskiy</td><td>Fesenkov Astrophyiscal Institute</td></tr>
+									<tr><td>Sagi Ben-Ami</td><td>Weizmann Institute of Science</td></tr>
+									<tr><td>Na'ama Hallakoun</td><td>Weizmann Institute of Science</td></tr>
+									<tr><td>Yarin-Meir Shani</td><td>Weizmann Institute of Science</td></tr>
+									<tr><td>Erika Paks&774tiene&775</td><td>Vilnus University</td></tr>
 								</table></p>
               
 							</section>
