--- a/xcov31_collaborators.html
+++ b/xcov31_collaborators.html
@@ -65,7 +65,8 @@
 									<tr><td>Sagi Ben-Ami</td><td>Weizmann Institute of Science</td></tr>
 									<tr><td>Na'ama Hallakoun</td><td>Weizmann Institute of Science</td></tr>
 									<tr><td>Yarin-Meir Shani</td><td>Weizmann Institute of Science</td></tr>
-									<tr><td>Erika Paks&774tiene&775</td><td>Vilnus University</td></tr>
+									<tr><td>Erika Paks&728tiene&729</td><td>Vilnus University</td></tr>
+									<tr><td>Waldemar Ogl&322oza</td><td>Mt. Suhora Observatory</td></tr>
 								</table></p>
               
 							</section>
