--- a/xcov31_collaborators.html
+++ b/xcov31_collaborators.html
@@ -65,8 +65,9 @@
 									<tr><td>Sagi Ben-Ami</td><td>Weizmann Institute of Science</td></tr>
 									<tr><td>Na'ama Hallakoun</td><td>Weizmann Institute of Science</td></tr>
 									<tr><td>Yarin-Meir Shani</td><td>Weizmann Institute of Science</td></tr>
-									<tr><td>Erika Paks&728tiene&729</td><td>Vilnus University</td></tr>
-									<tr><td>Waldemar Ogl&322oza</td><td>Mt. Suhora Observatory</td></tr>
+									<tr><td>Erika Pak&scaron;tien&edot;</td><td>Vilnus University</td></tr>
+									<tr><td>Waldemar Og&lstrok;oza</td><td>Mt. Suhora Astonomical Observatory, University of the National Education Comission</td></tr>
+									<tr><td>Staszek Zola</td><td>Astronomical Observaoty, Jagiellonian University</td></tr>
 								</table></p>
               
 							</section>
