--- a/xcov31_collaborators.html
+++ b/xcov31_collaborators.html
@@ -68,6 +68,11 @@
 									<tr><td>Erika Pak&scaron;tien&edot;</td><td>Vilnus University</td></tr>
 									<tr><td>Waldemar Og&lstrok;oza</td><td>Mt. Suhora Astonomical Observatory, University of the National Education Comission</td></tr>
 									<tr><td>Staszek Zola</td><td>Astronomical Observaoty, Jagiellonian University</td></tr>
+									<tr><td>Zso&#769fia Bogna&#769r</td><td>Piszke&#769stet&odblac Observatory</td></tr>
+									<tr><td>Jan K&a730;re Trandem Qvam</td><td>Horten Astronomical Observatory</td></tr>
+									<tr><td>Ana Mari&#769a Ulla Miguel</td><td>Universidade de Vigo</td></tr>
+									<tr><td>Eva Villaver</td><td>Autonomous University of Madrid</td></tr>
+									<tr><td>Ant&o770;nio Kanaan</td><td>Universidade Federal de Santa Catarina</td></tr>
 								</table></p>
               
 							</section>
