--- a/xcov31_collaborators.html
+++ b/xcov31_collaborators.html
@@ -66,7 +66,7 @@
 									<tr><td>Na'ama Hallakoun</td><td>Weizmann Institute of Science</td></tr>
 									<tr><td>Yarin-Meir Shani</td><td>Weizmann Institute of Science</td></tr>
 									<tr><td>Erika Pak&scaron;tien&edot;</td><td>Vilnus University</td></tr>
-									<tr><td>Waldemar Og&lstrok;oza</td><td>Mt. Suhora Astonomical Observatory, University of the National Education Comission</td></tr>
+									<tr><td>Waldemar Og&lstrok;oza</td><td>Mt. Suhora Astronomical Observatory, University of the National Education Comission</td></tr>
 									<tr><td>Staszek Zola</td><td>Astronomical Observaoty, Jagiellonian University</td></tr>
 									<tr><td>Zso&#769fia Bogna&#769r</td><td>Piszke&#769steto&#779 Observatory</td></tr>
 									<tr><td>Jan Ka&#778re Trandem Qvam</td><td>Horten Astronomical Observatory</td></tr>
