--- a/xcov31_targets.html
+++ b/xcov31_targets.html
@@ -28,7 +28,8 @@
 						<!-- Content -->
 							<section id="content" class="main">
 								<h2>Primary Target</h2>
-								<p></p>
+								<p>G29-38</p>
+								<p>RA: 23 28 47.637; Dec: +05 14 54.235</p>
                 
 							</section>
 						
