--- a/xcov31_targets.html
+++ b/xcov31_targets.html
@@ -35,7 +35,10 @@
 						
 						<section id="content" class="main">
 								<h2>Northern Hemisphere Secondary Targets</h2>
-								<p></p>
+								<p>GD 532</p>
+								<p>RA: 19 03 19.564; Dec: +60 35 52.65</p>
+								<p>WD 0145+234</p>
+								<p>RA: 01 47 54.82; Dec: +23 39 43.6</p>
                 
 							</section>
 						<section id="content" class="main">
