--- a/xcov31_targets.html
+++ b/xcov31_targets.html
@@ -39,11 +39,14 @@
 								<p>RA: 19 03 19.564; Dec: +60 35 52.65</p>
 								<p>WD 0145+234</p>
 								<p>RA: 01 47 54.82; Dec: +23 39 43.6</p>
+								<p>GALEX J215503.0+761009</p>
+								<p>RA: 21 55 02.96; Dec: +76 10 09.19</p>
                 
 							</section>
 						<section id="content" class="main">
 								<h2>Southern Hemisphere Secondary Targets</h2>
-								<p></p>
+								<p>PB 7225</p>
+								<p>RA: ; Dec:</p>
                 
 							</section>
 
