--- a/xcov31_targets.html
+++ b/xcov31_targets.html
@@ -45,8 +45,12 @@
 							</section>
 						<section id="content" class="main">
 								<h2>Southern Hemisphere Secondary Targets</h2>
-								<p>PB 7225</p>
-								<p>RA: ; Dec:</p>
+								<p>PB 7225, G mag = 16.92</p>
+								<p>RA: 22 48 40.07; Dec: -06 42 44.65</p>
+								<p>WG 14, G mag = 14.94</p>
+								<p>RA: 09 51 39.2; Dec: -57 26 38.57</p>
+								<p>EC 21548-5908, G mag = 15.79</p>
+								<p>RA: 21 58 23.88; Dec: -58 53 53.81</p>
                 
 							</section>
 
