--- a/xcov31_collaborators.html
+++ b/xcov31_collaborators.html
@@ -35,6 +35,8 @@
 									<tr><td>Millie Dill</td><td>University of Delaware</td></tr>
 									<tr><td>Judith Provencal</td><td>University of Delaware</td></tr>
 									<tr><td>Kim Green</td><td>Mount Cuba Astronomical Observatory (MCAO)</td></tr>
+									<tr><td>Keaton Bell</td><td>Queens College, City University of New York (CUNY)</td></tr>
+									<tr><td>Seyedehnikoo Hosseininezhad</td><td>CUNY Graduate Center</td></tr>
 									<tr><td>Amy Bonsor</td><td>University of Cambridge, Institute of Astronomy</td></tr>
 									<tr><td>Siyi Xu</td><td>NOIRLab</td></tr>
 									<tr><td>Atsuko Nitta</td><td>NOIRLab</td></tr>
