--- a/xcov31_collaborators.html
+++ b/xcov31_collaborators.html
@@ -75,7 +75,10 @@
 									<tr><td>Waldemar Og&lstrok;oza</td><td>Mt. Suhora Astronomical Observatory, University of the National Education Comission</td></tr>
 									<tr><td>Staszek Zola</td><td>Astronomical Observatory, Jagiellonian University</td></tr>
 									<tr><td>Zso&#769fia Bogna&#769r</td><td>Piszke&#769steto&#779 Observatory</td></tr>
+									<tr><td>Alex Binks</td><td>University of T&uuml;dingen</td></tr>
 									<tr><td>Jan Ka&#778re Trandem Qvam</td><td>Horten Astronomical Observatory</td></tr>
+									<tr><td>Boris Gaensicke</td><td>University of Warwick</td></tr>
+									<tr><td>Paul Chote</td><td>University of Warwick</td></tr>
 									<tr><td>Ana Mari&#769a Ulla Miguel</td><td>Universidade de Vigo</td></tr>
 									<tr><td>Eva Villaver</td><td>Autonomous University of Madrid</td></tr>
 									<tr><td>Anto&#770nio Kanaan</td><td>Universidade Federal de Santa Catarina</td></tr>
