--- a/xcov31_telescopes.html
+++ b/xcov31_telescopes.html
@@ -30,10 +30,11 @@
 								<p>The telescopes providing observations to this campaign are listed below.
 								<table>
 									<tr><th>Telescope</th><th>Type</th><th>Location</th></tr>
-									<tr><td>National Astronomical Observatory San Pedro Martir (OAN-SPM)</td><td>Infrared</td><td>Baja California, Mexico</td></tr>
+									<tr><td>Apache Point Observatory (APO) 3.5m</td><td>Infrared</td><td>Sunspot, New Mexico, USA</td></tr>
+									<tr><td>National Astronomical Observatory San Pedro Martir (OAN-SPM) 1.5m</td><td>Infrared</td><td>Baja California, Mexico</td></tr>
 									<tr><td>Haleakala 2-meter, Las Cumbres Observatory (LCO) global telescope network</td><td>Infrared</td><td>Haleakala, Hawaii, USA</td></tr>
 									<tr><td>Gemini South</td><td>Infrared</td><td>Cerro Tololo Inter-American Observatory (CTIO), Chile</td></tr>
-									<tr><td>Calar Alto Observatory (CAHA)</td><td>Infrared</td><td>Andalucia, Spain</td></tr>
+									<tr><td>Calar Alto Observatory (CAHA) 2.2m</td><td>Infrared</td><td>Andalucia, Spain</td></tr>
 									<tr><td>Mt. Cuba Observatory (MCAO)</td><td>Optical</td><td>Wilmington, Delaware, USA</td></tr>
 									<tr><td>ERAU 1m</td><td>Optical</td><td>Daytona Beach, Florida, USA</td></tr>
 									<tr><td>Baker Observatory</td><td>Optical</td><td>Fair Grove, Missouri, USA</td></tr>
