--- a/xcov31_telescopes.html
+++ b/xcov31_telescopes.html
@@ -35,8 +35,9 @@
 									<tr><td>Haleakala 2-meter, Las Cumbres Observatory (LCO) global telescope network</td><td>Infrared</td><td>Haleakala, Hawaii, USA</td></tr>
 									<tr><td>Gemini South</td><td>Infrared</td><td>Cerro Tololo Inter-American Observatory (CTIO), Chile</td></tr>
 									<tr><td>Calar Alto Observatory (CAHA) 2.2m</td><td>Infrared</td><td>Andalucia, Spain</td></tr>
-									<tr><td>Mt. Cuba Observatory (MCAO)</td><td>Optical</td><td>Wilmington, Delaware, USA</td></tr>
+									<tr><td>Mt. Cuba Observatory (MCAO) 0.6m</td><td>Optical</td><td>Wilmington, Delaware, USA</td></tr>
 									<tr><td>ERAU 1m</td><td>Optical</td><td>Daytona Beach, Florida, USA</td></tr>
+									<tr><td>Lookout Observatory 14 inch</td><td>Optical</td><td>Asheville, North Carolina, USA</td></tr>
 									<tr><td>Baker Observatory</td><td>Optical</td><td>Fair Grove, Missouri, USA</td></tr>
 									<tr><td>Paul and Jane Meyer Observatory (PJMO)</td><td>Optical</td><td>Valley Mills, Texas, USA</td></tr>
 									<tr><td>2.1-meter, McDonald Observatory</td><td>Optical</td><td>Fort Davis, Texas, USA</td></tr>
@@ -49,9 +50,10 @@
 									<tr><td>Mt. Suhora Astronomical Observatory</td><td>Optical</td><td>Koninki, Poland</td></tr>
 									<tr><td>Krakow 0.5m</td><td>Optical</td><td>Krakow, Poland</td></tr>
 									<tr><td>Piszkéstető Observatory</td><td>Optical</td><td>Mátraszentimre, Hungary</td></tr>
+									<tr><td>Warwick 1m</td><td>Optical</td><td>Warwick, UK</td></tr>
 									<tr><td>Teide 1-meter, LCO</td><td>Optical</td><td>Tenerife, Spain</td></tr>
 									<tr><td>Roque de los Muchachos 1-meter (RM), SARA</td><td>Optical</td><td>La Palma, Spain</td></tr>
-									<tr><td>Pico dos Dias Observatory (OPD)</td><td>Optical</td><td>Itajuba, Brazil</td></tr>
+									<tr><td>Pico dos Dias Observatory (OPD) 0.6m</td><td>Optical</td><td>Itajuba, Brazil</td></tr>
 									<tr><td>CTIO 0.6-meter, SARA</td><td>Optical</td><td>CTIO, Chile</td></tr>
 									<tr><td>CTIO 1-meter, LCO</td><td>Optical</td><td>CTIO, Chile</td></tr>
 									
