--- a/xcov31_telescopes.html
+++ b/xcov31_telescopes.html
@@ -42,10 +42,14 @@
 									<tr><td>Paul and Jane Meyer Observatory (PJMO)</td><td>Optical</td><td>Valley Mills, Texas, USA</td></tr>
 									<tr><td>2.1-meter, McDonald Observatory</td><td>Optical</td><td>Fort Davis, Texas, USA</td></tr>
 									<tr><td>McDonald 1-meter, LCO</td><td>Optical</td><td>Fort Davis, Texas, USA</td></tr>
-									<tr><td>Steward Observatory</td><td>Optical</td><td>Tucson, Arizona, USA</td></tr>
+									<tr><td>Steward Observatory 61"</td><td>Optical</td><td>Tucson, Arizona, USA</td></tr>
 									<tr><td>Kitt Peak 0.9-meter (KP), Southeastern Association for Research in Astronomy (SARA)</td><td>Optical</td><td>Tuscon, Arizona, USA</td></tr>
 									<tr><td>University of Hawaii 2.2 meter</td><td>Optical</td><td>Muana Kea, Hawaii, USA</td></tr>
 									<tr><td>Amagi Observatory</td><td>Optical</td><td>Amagi, Japan</td></tr>
+									<tr><td>Lulin Observatory 1m</td><td>Optical</td><td>Xinyi Township, Taiwan</td></tr>
+									<tr><td>Xinglong Observatory 0.85m</td><td>Optical</td><td>Chengde, China</td></tr>
+									<tr><td>Xinglong Observatory, 0.8m</td><td>Optical</td><td>Chengde, China</td></tr>
+									<tr><td>Xinglong Observatory 0.6m</td><td>Optical</td><td>Chenge, China</td></tr>
 									<tr><td>Large Array Survey Telescope (LAST)</td><td>Optical</td><td>Kibbutz Neot Smadar, Israel</td></tr>
 									<tr><td>Mt. Suhora Astronomical Observatory</td><td>Optical</td><td>Koninki, Poland</td></tr>
 									<tr><td>Krakow 0.5m</td><td>Optical</td><td>Krakow, Poland</td></tr>
