--- a/xcov31_telescopes.html
+++ b/xcov31_telescopes.html
@@ -52,6 +52,8 @@
 									<tr><td>Xinglong Observatory 0.6m</td><td>Optical</td><td>Chengde, China</td></tr>
 									<tr><td>Nanshan Observatory 0.43m</td><td>Optical</td><td>Xiaofengliang, China</td></tr>
 									<tr><td>1.3m Devasthal Fast-Optical Telescope (DFOT)</td><td>Optical</td><td>Devasthal, India</td></tr>
+									<tr><td>Zeiss-1000 at Assy-Turgen Observatory</td><td>Optical</td><td>Assy-Turgen, Kazakhstan</td></tr>
+									<tr><td>AZT-20 at Assy-Turgen Observatory</td><td>Optical</td><td>Assy-Turgen, Kazakhstan</td></tr>
 									<tr><td>Large Array Survey Telescope (LAST)</td><td>Optical</td><td>Kibbutz Neot Smadar, Israel</td></tr>
 									<tr><td>Mt. Suhora Astronomical Observatory</td><td>Optical</td><td>Koninki, Poland</td></tr>
 									<tr><td>Krakow 0.5m</td><td>Optical</td><td>Krakow, Poland</td></tr>
