--- a/xcov31_telescopes.html
+++ b/xcov31_telescopes.html
@@ -60,6 +60,7 @@
 									<tr><td>Mt. Suhora Astronomical Observatory</td><td>Optical</td><td>Koninki, Poland</td></tr>
 									<tr><td>Krakow 0.5m</td><td>Optical</td><td>Krakow, Poland</td></tr>
 									<tr><td>Piszkéstető Observatory</td><td>Optical</td><td>Mátraszentimre, Hungary</td></tr>
+									<tr><td>Tübingen Observatory 0.8m</td><td>Optical</td><td>Tübingen, Germany</td></tr>
 									<tr><td>Warwick 1m</td><td>Optical</td><td>Warwick, UK</td></tr>
 									<tr><td>Teide 1-meter, LCO</td><td>Optical</td><td>Tenerife, Spain</td></tr>
 									<tr><td>Roque de los Muchachos 1-meter (RM), SARA</td><td>Optical</td><td>La Palma, Spain</td></tr>
