--- a/xcov31_targets.html
+++ b/xcov31_targets.html
@@ -30,6 +30,8 @@
 								<h2>Primary Target</h2>
 								<p>G29-38, G mag = 13.06</p>
 								<p>RA: 23 28 47.637; Dec: +05 14 54.235</p>
+								<span class="image"><img src="images/G29-38_20arcminute_finder_chart.jpeg" width="300" height=auto alt="" /></span>
+								<h3>Finder Chart</h3>
                 
 							</section>
 						
