--- a/xcov31_targets.html
+++ b/xcov31_targets.html
@@ -41,8 +41,12 @@
 								<h2>Northern Hemisphere Secondary Targets</h2>
 								<p>GD 532, G mag = 15.01</p>
 								<p>RA: 19 03 19.564; Dec: +60 35 52.65</p>
+								<h3>Finder Chart:</h3>
+								<span class="image"><img src="images/GD_532_20arcminute_finder_chart.jpeg" width="500" height=auto alt="" /></span>
 								<p>WD 0145+234, G mag = 14.03</p>
 								<p>RA: 01 47 54.82; Dec: +23 39 43.6</p>
+								<h3>Finder Chart:</h3>
+								<span class="image"><img src="images/WD_0145+234_20arcminute_finder_chart.jpeg" width="500" height=auto alt="" /></span>
 								<p>GALEX J215503.0+761009, G mag = 16.83</p>
 								<p>RA: 21 55 02.96; Dec: +76 10 09.19</p>
                 
