--- a/xcov31_targets.html
+++ b/xcov31_targets.html
@@ -49,16 +49,24 @@
 								<span class="image"><img src="images/WD_0145+234_20arcminute_finder_chart.jpeg" width="500" height=auto alt="" /></span>
 								<p>GALEX J215503.0+761009, G mag = 16.83</p>
 								<p>RA: 21 55 02.96; Dec: +76 10 09.19</p>
+								<h3>Finder Chart:</h3>
+								<span class="image"><img src="images/GALEX_J215503.0+761009_20arcminute_finder_chart.jpeg" width="500" height=auto alt="" /></span>
                 
 							</section>
 						<section id="content" class="main">
 								<h2>Southern Hemisphere Secondary Targets</h2>
 								<p>PB 7225, G mag = 16.92</p>
 								<p>RA: 22 48 40.07; Dec: -06 42 44.65</p>
+								<h3>Finder Chart:</h3>
+								<span class="image"><img src="images/PB_7225_20arcminute_finder_chart.jpeg" width="500" height=auto alt="" /></span>
 								<p>WG 14, G mag = 14.94</p>
 								<p>RA: 09 51 39.2; Dec: -57 26 38.57</p>
+								<h3>Finder Chart:</h3>
+								<span class="image"><img src="images/WG_14_20arcminute_finder_chart.jpeg" width="500" height=auto alt="" /></span>
 								<p>EC 21548-5908, G mag = 15.79</p>
 								<p>RA: 21 58 23.88; Dec: -58 53 53.81</p>
+								<h3>Finder Chart:</h3>
+								<span class="image"><img src="images/EC_21548-5908_20arcminute_finder_chart.jpeg" width="500" height=auto alt="" /></span>
                 
 							</section>
 
