--- a/xcov31_telescopes.html
+++ b/xcov31_telescopes.html
@@ -61,9 +61,9 @@
 									<tr><td>Krakow 0.5m</td><td>Optical</td><td>Krakow, Poland</td></tr>
 									<tr><td>Piszkéstető Observatory</td><td>Optical</td><td>Mátraszentimre, Hungary</td></tr>
 									<tr><td>Tübingen Observatory 0.8m</td><td>Optical</td><td>Tübingen, Germany</td></tr>
-									<tr><td>Warwick 1m</td><td>Optical</td><td>Warwick, UK</td></tr>
 									<tr><td>Teide 1-meter, LCO</td><td>Optical</td><td>Tenerife, Spain</td></tr>
-									<tr><td>Roque de los Muchachos 1-meter (RM), SARA</td><td>Optical</td><td>La Palma, Spain</td></tr>
+									<tr><td>Roque de los Muchachos 1-meter (RM), SARA</td><td>Optical</td><td>Roque de los Muchachos, La Palma, Spain</td></tr>
+									<tr><td>Warwick 1m</td><td>Optical</td><td>Roque de los Muchachos, La Palma, Spain</td></tr>
 									<tr><td>Pico dos Dias Observatory (OPD) 0.6m</td><td>Optical</td><td>Itajuba, Brazil</td></tr>
 									<tr><td>CTIO 0.6-meter, SARA</td><td>Optical</td><td>CTIO, Chile</td></tr>
 									<tr><td>CTIO 1-meter, LCO</td><td>Optical</td><td>CTIO, Chile</td></tr>
