--- a/xcov31_collaborators.html
+++ b/xcov31_collaborators.html
@@ -79,6 +79,7 @@
 									<tr><td>Jan Ka&#778re Trandem Qvam</td><td>Horten Astronomical Observatory</td></tr>
 									<tr><td>Boris Gaensicke</td><td>University of Warwick</td></tr>
 									<tr><td>Paul Chote</td><td>University of Warwick</td></tr>
+									<tr><td>Morgan Mitchell</td><td>University of Warwick</td></tr>
 									<tr><td>Ana Mari&#769a Ulla Miguel</td><td>Universidade de Vigo</td></tr>
 									<tr><td>Eva Villaver</td><td>Autonomous University of Madrid</td></tr>
 									<tr><td>Anto&#770nio Kanaan</td><td>Universidade Federal de Santa Catarina</td></tr>
