--- a/xcov31_collaborators.html
+++ b/xcov31_collaborators.html
@@ -74,7 +74,8 @@
 									<tr><td>Erika Pak&scaron;tien&edot;</td><td>Vilnus University</td></tr>
 									<tr><td>Waldemar Og&lstrok;oza</td><td>Mt. Suhora Astronomical Observatory, University of the National Education Comission</td></tr>
 									<tr><td>Staszek Zola</td><td>Astronomical Observatory, Jagiellonian University</td></tr>
-									<tr><td>Zso&#769fia Bogna&#769r</td><td>Piszke&#769steto&#779 Observatory</td></tr>
+									<tr><td>Zso&#769fia Bogna&#769r</td><td>Konkoly Observatory</td></tr>
+									<tr><td>Petra Va&#769rkonyi</td><td> E&ouml;tv&ouml;s Lora&#769and University</td></tr>
 									<tr><td>Alex Binks</td><td>University of T&uuml;bingen</td></tr>
 									<tr><td>Jan Ka&#778re Trandem Qvam</td><td>Horten Astronomical Observatory</td></tr>
 									<tr><td>Boris Gaensicke</td><td>University of Warwick</td></tr>
