--- a/xcov31_telescopes.html
+++ b/xcov31_telescopes.html
@@ -54,7 +54,7 @@
 									<tr><td>1.3m Devasthal Fast-Optical Telescope (DFOT)</td><td>Optical</td><td>Devasthal, India</td></tr>
 									<tr><td>Zeiss-1000 at Assy-Turgen Observatory</td><td>Optical</td><td>Assy-Turgen, Kazakhstan</td></tr>
 									<tr><td>AZT-20 at Assy-Turgen Observatory</td><td>Optical</td><td>Assy-Turgen, Kazakhstan</td></tr>
-									<tr><td>ADYU60 at Adiyaman Observatory</td><td>Optical</td><td>Altinsehir, Türkiye</td></tr>
+									<tr><td>ADYU60 at Adiyaman Observatory</td><td>Optical</td><td>Adiyaman, Türkiye</td></tr>
 									<tr><td>Large Array Survey Telescope (LAST)</td><td>Optical</td><td>Kibbutz Neot Smadar, Israel</td></tr>
 									<tr><td>Moletai Observatory 0.35m</td><td>Optical</td><td>Kulionys, Lithuania</td></tr>
 									<tr><td>Mt. Suhora Astronomical Observatory</td><td>Optical</td><td>Koninki, Poland</td></tr>
