--- a/xcov31_telescopes.html
+++ b/xcov31_telescopes.html
@@ -57,9 +57,9 @@
 									<tr><td>ADYU60 at Adiyaman Observatory</td><td>Optical</td><td>Adiyaman, Türkiye</td></tr>
 									<tr><td>Large Array Survey Telescope (LAST)</td><td>Optical</td><td>Kibbutz Neot Smadar, Israel</td></tr>
 									<tr><td>Moletai Observatory 0.35m</td><td>Optical</td><td>Kulionys, Lithuania</td></tr>
-									<tr><td>Mt. Suhora Astronomical Observatory</td><td>Optical</td><td>Koninki, Poland</td></tr>
+									<tr><td>Mt. Suhora Astronomical Observatory 0.6m</td><td>Optical</td><td>Koninki, Poland</td></tr>
 									<tr><td>Krakow 0.5m</td><td>Optical</td><td>Krakow, Poland</td></tr>
-									<tr><td>Piszkéstető Observatory</td><td>Optical</td><td>Mátraszentimre, Hungary</td></tr>
+									<tr><td>Piszkéstető Observatory 1m RCC</td><td>Optical</td><td>Mátraszentimre, Hungary</td></tr>
 									<tr><td>Tübingen Observatory 0.8m</td><td>Optical</td><td>Tübingen, Germany</td></tr>
 									<tr><td>Teide 1-meter, LCO</td><td>Optical</td><td>Tenerife, Spain</td></tr>
 									<tr><td>Roque de los Muchachos 1-meter (RM), SARA</td><td>Optical</td><td>Roque de los Muchachos, La Palma, Spain</td></tr>
