--- a/xcov31_telescopes.html
+++ b/xcov31_telescopes.html
@@ -40,9 +40,10 @@
 									<tr><td>ERAU 1m</td><td>Optical</td><td>Daytona Beach, Florida, USA</td></tr>
 									<tr><td>Lookout Observatory 14 inch</td><td>Optical</td><td>Asheville, North Carolina, USA</td></tr>
 									<tr><td>Baker Observatory</td><td>Optical</td><td>Fair Grove, Missouri, USA</td></tr>
-									<tr><td>Paul and Jane Meyer Observatory (PJMO)</td><td>Optical</td><td>Valley Mills, Texas, USA</td></tr>
+									<tr><td>Paul and Jane Meyer Observatory (PJMO) 0.6m</td><td>Optical</td><td>Valley Mills, Texas, USA</td></tr>
 									<tr><td>2.1-meter, McDonald Observatory</td><td>Optical</td><td>Fort Davis, Texas, USA</td></tr>
 									<tr><td>McDonald 1-meter, LCO</td><td>Optical</td><td>Fort Davis, Texas, USA</td></tr>
+									<tr><td>APO 0.5m</td><td>Infrared</td><td>Sunspot, New Mexico, USA</td></tr>
 									<tr><td>Steward Observatory 61"</td><td>Optical</td><td>Tucson, Arizona, USA</td></tr>
 									<tr><td>Kitt Peak 0.9-meter (KP), Southeastern Association for Research in Astronomy (SARA)</td><td>Optical</td><td>Tuscon, Arizona, USA</td></tr>
 									<tr><td>University of Hawaii 2.2 meter</td><td>Optical</td><td>Muana Kea, Hawaii, USA</td></tr>
