--- a/xcov31_telescopes.html
+++ b/xcov31_telescopes.html
@@ -63,6 +63,7 @@
 									<tr><td>Krakow 0.5m</td><td>Optical</td><td>Krakow, Poland</td></tr>
 									<tr><td>Piszkéstető Observatory 1m RCC</td><td>Optical</td><td>Mátraszentimre, Hungary</td></tr>
 									<tr><td>Tübingen Observatory 0.8m</td><td>Optical</td><td>Tübingen, Germany</td></tr>
+									<tr><td>Horten Astronomical Observatory 0.68m</td><td>Optical</td><td>Horten, Norway</td></tr>
 									<tr><td>Teide 1-meter, LCO</td><td>Optical</td><td>Tenerife, Spain</td></tr>
 									<tr><td>Roque de los Muchachos 1-meter (RM), SARA</td><td>Optical</td><td>Roque de los Muchachos, La Palma, Spain</td></tr>
 									<tr><td>Warwick 1m</td><td>Optical</td><td>Roque de los Muchachos, La Palma, Spain</td></tr>
