--- a/xcov31_telescopes.html
+++ b/xcov31_telescopes.html
@@ -59,8 +59,10 @@
 									<tr><td>ADYU60 at Adiyaman Observatory</td><td>Optical</td><td>Adiyaman, Türkiye</td></tr>
 									<tr><td>Large Array Survey Telescope (LAST)</td><td>Optical</td><td>Kibbutz Neot Smadar, Israel</td></tr>
 									<tr><td>Moletai Observatory 0.35m</td><td>Optical</td><td>Kulionys, Lithuania</td></tr>
+									<tr><td>Tymce 14inch remote telescope</td><td>Optical</td><td>Tymce, Poland</td></tr>
 									<tr><td>Mt. Suhora Astronomical Observatory 0.6m</td><td>Optical</td><td>Koninki, Poland</td></tr>
 									<tr><td>Krakow 0.5m</td><td>Optical</td><td>Krakow, Poland</td></tr>
+									<tr><td>CDK500 Remote telescope</td><td>Optical</td><td>Krakow, Poland</td></tr>
 									<tr><td>Piszkéstető Observatory 1m RCC</td><td>Optical</td><td>Mátraszentimre, Hungary</td></tr>
 									<tr><td>Tübingen Observatory 0.8m</td><td>Optical</td><td>Tübingen, Germany</td></tr>
 									<tr><td>Horten Astronomical Observatory 0.68m</td><td>Optical</td><td>Horten, Norway</td></tr>
