--- a/xcov31_collaborators.html
+++ b/xcov31_collaborators.html
@@ -61,6 +61,7 @@
 									<tr><td>Kyle Hart</td><td>University of Hawaii</td></tr>
 									<tr><td>Kouji Yanagida</td><td>Amagi Observatory</td></tr>
 									<tr><td>Wen-Ping Chen</td><td>National Central University</td></tr>
+									<tr><td>Khushboo Kunwar Rao</td><td>National Central University</td></tr>
 									<tr><td>Xiaojun Jiang</td><td>National Astronomical Observatories, Chinese Academy of Sciences</td></tr>
 									<tr><td>Jiaqi Wang</td><td>National Astronomical Observatories, Chinese Academy of Sciences</td></tr>
 									<tr><td>Santosh Josi</td><td>ARIES, Aryabhatta Research Institute of Observational Sciences</td></tr>
