--- a/xcov31_collaborators.html
+++ b/xcov31_collaborators.html
@@ -62,8 +62,9 @@
 									<tr><td>Kouji Yanagida</td><td>Amagi Observatory</td></tr>
 									<tr><td>Wen-Ping Chen</td><td>National Central University</td></tr>
 									<tr><td>Khushboo Kunwar Rao</td><td>National Central University</td></tr>
-									<tr><td>Xiaojun Jiang</td><td>National Astronomical Observatories, Chinese Academy of Sciences</td></tr>
-									<tr><td>Jiaqi Wang</td><td>National Astronomical Observatories, Chinese Academy of Sciences</td></tr>
+									<tr><td>Xiao-Jun Jiang</td><td>National Astronomical Observatories, Chinese Academy of Sciences (NAOC)</td></tr>
+									<tr><td>Jia-Qi Wang</td><td>NAOC</td></tr>
+									<tr><td>Hui-Juan Wang</td><td>NAOC</td></tr>
 									<tr><td>Santosh Josi</td><td>ARIES, Aryabhatta Research Institute of Observational Sciences</td></tr>
 									<tr><td>Athul Dileep</td><td>ARIES, Aryabhatta Research Institute of Observational Sciences</td></tr>
 									<tr><td>S. Seetha</td><td>Raman Research Institute</td></tr>
