--- a/xcov31_collaborators.html
+++ b/xcov31_collaborators.html
@@ -65,6 +65,9 @@
 									<tr><td>Xiao-Jun Jiang</td><td>National Astronomical Observatories, Chinese Academy of Sciences (NAOC)</td></tr>
 									<tr><td>Jia-Qi Wang</td><td>NAOC</td></tr>
 									<tr><td>Hui-Juan Wang</td><td>NAOC</td></tr>
+									<tr><td>Jin-Zhong Liu</td><td>Xinjiang Astronomical Observatory, Chinese Academy of Sciences (XAO)</td></tr>
+									<tr><td>Chun-Hai Bai</td><td>XAO</td></tr>
+									<tr><td>Tu-Hong Zhong</td><td>XAO</td></tr>
 									<tr><td>Santosh Josi</td><td>ARIES, Aryabhatta Research Institute of Observational Sciences</td></tr>
 									<tr><td>Athul Dileep</td><td>ARIES, Aryabhatta Research Institute of Observational Sciences</td></tr>
 									<tr><td>S. Seetha</td><td>Raman Research Institute</td></tr>
