--- a/xcov31_collaborators.html
+++ b/xcov31_collaborators.html
@@ -54,6 +54,12 @@
 									<tr><td>Tony Fedi</td><td>Baylor University</td></tr>
 									<tr><td>Elizabeth Green</td><td>University of Arizona and Steward Observatory</td></tr>
 									<tr><td>Mukremin Kilic</td><td>University of Oklahoma</td></tr>
+									<tr><td>Adam Moss</td><td>University of Oklahoma</td></tr>
+									<tr><td>Alex Wiggs</td><td>University of Oklahoma</td></tr>
+									<tr><td>Alex Gleason</td><td>University of Oklahoma</td></tr>
+									<tr><td>Manuel Barrientos</td><td>University of Oklahoma</td></tr>
+									<tr><td>Sabrina Poulsen</td><td>University of Oklahoma</td></tr>
+									<tr><td>Gracyn Jewett</td><td>University of Oklahoma</td></tr>
 									<tr><td>Lester Fox Machado</td><td>Instituto de Astronomi&#769a de la Universidad Nacional Auto&#769noma de Me&#769xico</td></tr>
 									<tr><td>Carolina Carbajal Quinata</td><td>Instituto de Astronomi&#769a de la Universidad Nacional Auto&#769noma de Me&#769xico</td></tr>
 									<tr><td>Daniel Huber</td><td>University of Hawaii</td></tr>
