--- a/xcov31_collaborators.html
+++ b/xcov31_collaborators.html
@@ -55,7 +55,7 @@
 									<tr><td>Elizabeth Green</td><td>University of Arizona and Steward Observatory</td></tr>
 									<tr><td>Mukremin Kilic</td><td>University of Oklahoma</td></tr>
 									<tr><td>Adam Moss</td><td>University of Oklahoma</td></tr>
-									<tr><td>Alex Wiggs</td><td>University of Oklahoma</td></tr>
+									<tr><td>Alex Albright</td><td>University of Oklahoma</td></tr>
 									<tr><td>Alex Gleason</td><td>University of Oklahoma</td></tr>
 									<tr><td>Manuel Barrientos</td><td>University of Oklahoma</td></tr>
 									<tr><td>Sabrina Poulsen</td><td>University of Oklahoma</td></tr>
