--- a/xcov31_collaborators.html
+++ b/xcov31_collaborators.html
@@ -79,6 +79,7 @@
 									<tr><td>S. Seetha</td><td>Raman Research Institute</td></tr>
 									<tr><td>S. Muneer</td><td>Indian Institute of Astrophysics, Bengaluru</td></tr>
 									<tr><td>Alexander Serebryanskiy</td><td>Fesenkov Astrophyiscal Institute</td></tr>
+									<tr><td>Inna Reva</td><td>Tian Shan Astronomical Observatory, Fesenkov Astrophyiscal Institute</td></tr>
 									<tr><td>Nazli Karaman</td><td>Adiyaman, T&uuml;rkiye</td></tr>
 									<tr><td>Sagi Ben-Ami</td><td>Weizmann Institute of Science</td></tr>
 									<tr><td>Na'ama Hallakoun</td><td>Weizmann Institute of Science</td></tr>
