--- a/xcov31_collaborators.html
+++ b/xcov31_collaborators.html
@@ -80,7 +80,7 @@
 									<tr><td>S. Muneer</td><td>Indian Institute of Astrophysics, Bengaluru</td></tr>
 									<tr><td>Alexander Serebryanskiy</td><td>Fesenkov Astrophyiscal Institute</td></tr>
 									<tr><td>Inna Reva</td><td>Tian Shan Astronomical Observatory, Fesenkov Astrophyiscal Institute</td></tr>
-									<tr><td>Nazli Karaman</td><td>Adiyaman, T&uuml;rkiye</td></tr>
+									<tr><td>Nazli Karaman</td><td>Adiyaman University, T&uuml;rkiye</td></tr>
 									<tr><td>Erika Pak&scaron;tien&edot;</td><td>Vilnus University</td></tr>
 									<tr><td>Waldemar Og&lstrok;oza</td><td>Mt. Suhora Astronomical Observatory, University of the National Education Comission</td></tr>
 									<tr><td>Staszek Zola</td><td>Astronomical Observatory, Jagiellonian University</td></tr>
