--- a/xcov31_collaborators.html
+++ b/xcov31_collaborators.html
@@ -65,6 +65,13 @@
 									<tr><td>Daniel Huber</td><td>University of Hawaii</td></tr>
 									<tr><td>Andrew Hoffman</td><td>University of Hawaii</td></tr>
 									<tr><td>Kyle Hart</td><td>University of Hawaii</td></tr>
+									<tr><td>Willem Hoogendam</td><td>University of Hawaii</td></tr>
+									<tr><td>Quetin Charles</td><td>University of Hawaii</td></tr>
+									<tr><td>Theron Carmichael</td><td>University of Hawaii</td></tr>
+									<tr><td>Evan Carrasco</td><td>University of Hawaii</td></tr>
+									<tr><td>Jingyi Zhang</td><td>University of Hawaii</td></tr>
+									<tr><td>Rita Wang</td><td>University of Hawaii</td></tr>
+									<tr><td>Chase Urasaki</td><td>University of Hawaii</td></tr>
 									<tr><td>Kouji Yanagida</td><td>Amagi Observatory</td></tr>
 									<tr><td>Wen-Ping Chen</td><td>National Central University</td></tr>
 									<tr><td>Khushboo Kunwar Rao</td><td>National Central University</td></tr>
