--- a/xcov31_collaborators.html
+++ b/xcov31_collaborators.html
@@ -88,8 +88,11 @@
 									<tr><td>Alexander Serebryanskiy</td><td>Fesenkov Astrophyiscal Institute</td></tr>
 									<tr><td>Inna Reva</td><td>Tian Shan Astronomical Observatory, Fesenkov Astrophyiscal Institute</td></tr>
 									<tr><td>Nazli Karaman</td><td>Adiyaman University, T&uuml;rkiye</td></tr>
+									<tr><td>Muhammet Emir Kenger</td><td>Atat&uuml;rk University, T&uuml;rkiye</td></tr>
 									<tr><td>Erika Pak&scaron;tien&edot;</td><td>Vilnus University</td></tr>
 									<tr><td>Waldemar Og&lstrok;oza</td><td>Mt. Suhora Astronomical Observatory, University of the National Education Comission</td></tr>
+									<tr><td>Micha&lstrok; Siawk</td><td>Mt. Suhora Astronomical Observatory, University of the National Education Comission</td></tr>
+									<tr><td>Marek Drozdz</td><td>Mt. Suhora Astronomical Observatory, University of the National Education Comission</td></tr>
 									<tr><td>Staszek Zola</td><td>Astronomical Observatory, Jagiellonian University</td></tr>
 									<tr><td>Zso&#769fia Bogna&#769r</td><td>Konkoly Observatory</td></tr>
 									<tr><td>Petra Va&#769rkonyi</td><td> E&ouml;tv&ouml;s Lora&#769nd University</td></tr>
