--- a/xcov31_collaborators.html
+++ b/xcov31_collaborators.html
@@ -104,6 +104,8 @@
 									<tr><td>Ana Mari&#769a Ulla Miguel</td><td>Universidade de Vigo</td></tr>
 									<tr><td>Eva Villaver</td><td>Autonomous University of Madrid</td></tr>
 									<tr><td>Anto&#770nio Kanaan</td><td>Universidade Federal de Santa Catarina</td></tr>
+									<tr><td>Luciano Fraga</td><td>Universidade Federal de Santa Catarina</td></tr>
+									<tr><td>Ricardo Marzall</td><td>Universidade Federal de Santa Catarina</td></tr>
 								</table></p>
               
 							</section>
