--- a/xcov31_collaborators.html
+++ b/xcov31_collaborators.html
@@ -83,6 +83,7 @@
 									<tr><td>Tu-Hong Zhong</td><td>XAO</td></tr>
 									<tr><td>Santosh Josi</td><td>ARIES, Aryabhatta Research Institute of Observational Sciences</td></tr>
 									<tr><td>Athul Dileep</td><td>ARIES, Aryabhatta Research Institute of Observational Sciences</td></tr>
+									<tr><td>Surat</td><td>ARIES, Aryabhatta Research Institute of Observational Sciences</td></tr>
 									<tr><td>S. Seetha</td><td>Raman Research Institute</td></tr>
 									<tr><td>S. Muneer</td><td>Indian Institute of Astrophysics, Bengaluru</td></tr>
 									<tr><td>Alexander Serebryanskiy</td><td>Fesenkov Astrophyiscal Institute</td></tr>
