--- a/wet.html
+++ b/wet.html
@@ -54,8 +54,9 @@
 			<section id="content" class="main">
 								<!--span class="image main"><img src="images/pic04.jpg" alt="" /></span-->
 								<h2>Light curves</h2>
-								<p>We will update the complete campaign light curve after the data from each telescope's night of observation has been received and reduced by the Headquarters using the Maestro (Dalessio 2010)
-									and Wqed (Thompson and Mullally 2013) software packages.</p>
+								<span class="image"><img src="images/G29-38_lightcurve_WET_10-16" width="500" height=auto alt="" /></span>
+								<p>Here is the light curve of G29-38 after the first 4.5 nights of observing from 10/11. We will update this complete campaign light curve after the data from each telescope's night of observation has been received and reduced by the Headquarters using the Maestro (Dalessio 2010)
+									and phot2lc (Vanderbosche 2021) software packages.</p>
 							</section>
 
 					</div>
