--- a/xcov31_collaborators.html
+++ b/xcov31_collaborators.html
@@ -43,9 +43,10 @@
 									<tr><td>Scot Kleinman</td><td>Industry</td></tr>
 									<tr><td>Nicholas Ballering</td><td>Space Science Institute and the University of Virginia</td></tr>
 									<tr><td>Kate Su</td><td>Space Science Institute</td></tr>
-									<tr><td>Ted von Hippel</td><td>Embry-Riddle Aeronautical University</td></tr>
-									<tr><td>Matt Guthie</td><td>University of Connecticut</td></tr>
 									<tr><td>Britt Lundgren</td><td>University of North Carolina at Asheville</td></tr>
+									<tr><td>Jacob Crawford</td><td>University of North Carolina at Asheville</td></tr>
+									<tr><td>Jacob Stimac</td><td>University of North Carolina at Asheville</td></tr>
+									<tr><td>Will Kinley</td><td>University of North Carolina at Asheville</td></tr>
 									<tr><td>Andrzej Baran</td><td>Missouri State University</td></tr>
 									<tr><td>Michael Reed</td><td>Missouri State University</td></tr>
 									<tr><td>Mike Montegomery</td><td>University of Texas at Austin</td></tr>
