--- a/xcov31_collaborators.html
+++ b/xcov31_collaborators.html
@@ -53,6 +53,7 @@
 									<tr><td>Barbara Castanheira</td><td>Baylor University</td></tr>
 									<tr><td>Rudy Morales</td><td>Baylor University</td></tr>
 									<tr><td>Tony Fedi</td><td>Baylor University</td></tr>
+									<tr><td>Momin Khan</td><td>Baylor University</td></tr>
 									<tr><td>Elizabeth Green</td><td>University of Arizona and Steward Observatory</td></tr>
 									<tr><td>Mukremin Kilic</td><td>University of Oklahoma</td></tr>
 									<tr><td>Adam Moss</td><td>University of Oklahoma</td></tr>
