--- a/xcov31_collaborators.html
+++ b/xcov31_collaborators.html
@@ -109,6 +109,9 @@
 									<tr><td>Anto&#770nio Kanaan</td><td>Universidade Federal de Santa Catarina</td></tr>
 									<tr><td>Luciano Fraga</td><td>Universidade Federal de Santa Catarina</td></tr>
 									<tr><td>Ricardo Marzall</td><td>Universidade Federal de Santa Catarina</td></tr>
+									<tr><td>Diana Quispe Mamani</td><td>Universidade Federal de Santa Catarina</td></tr>
+									<tr><td>Jonathan Jo&atilde;o Ramos</td><td>Universidade Federal de Santa Catarina</td></tr>
+									<tr><td>Vitor Fermiano</td><td>Universidade Federal de Santa Catarina</td></tr>
 								</table></p>
               
 							</section>
