--- a/wet.html
+++ b/wet.html
@@ -54,10 +54,12 @@
 			<section id="content" class="main">
 								<!--span class="image main"><img src="images/pic04.jpg" alt="" /></span-->
 								<h2>Light curves</h2>
+								<p>We will update the complete campaign light curves of our targets after the data from each telescope's night of observation has been received and reduced by the Headquarters using the Maestro (Dalessio 2010)
+									and phot2lc (Vanderbosche 2021) software packages. The top panel of the light curves show the observations of a target in relative flux versus time since the first recorded observation.
+									The second panel shows the light curve transformed into frequency space, allowing us to identify the presenece of pulsations.</p>
 								<h3>G29-38</h3>
 								<span class="image"><img src="images/g2938_1020.png" width="500" height=auto alt="" /></span>
-								<p>Here is the light curve of G29-38 after the first 9 nights of observing. We will update this complete campaign light curve after the data from each telescope's night of observation has been received and reduced by the Headquarters using the Maestro (Dalessio 2010)
-									and phot2lc (Vanderbosche 2021) software packages.</p>
+								<p>Here is the light curve of G29-38 after the first 9 nights of observing. We can see that G29-38 currently has very large pulsations occuring. </p>
 							</section>
 
 					</div>
