--- a/xcov31_collaborators.html
+++ b/xcov31_collaborators.html
@@ -37,12 +37,20 @@
 									<tr><td>Kim Green</td><td>Mount Cuba Astronomical Observatory (MCAO)</td></tr>
 									<tr><td>Keaton Bell</td><td>Queens College, City University of New York (CUNY)</td></tr>
 									<tr><td>Seyedehnikoo Hosseininezhad</td><td>CUNY Graduate Center</td></tr>
+									<tr><td>Easton Honaker</td><td>University of Delaware</td></tr>
+									<tr><td>Tali Natan</td><td>University of Delaware</td></tr>
 									<tr><td>Amy Bonsor</td><td>University of Cambridge, Institute of Astronomy</td></tr>
 									<tr><td>Siyi Xu</td><td>NOIRLab</td></tr>
 									<tr><td>Atsuko Nitta</td><td>NOIRLab</td></tr>
 									<tr><td>Scot Kleinman</td><td>Industry</td></tr>
 									<tr><td>Nicholas Ballering</td><td>Space Science Institute and the University of Virginia</td></tr>
 									<tr><td>Kate Su</td><td>Space Science Institute</td></tr>
+									<tr><td>Dave Groski</td><td>MCAO</td></tr>
+									<tr><td>Bob Unger</td><td>MCAO</td></tr>
+									<tr><td>Greg Lee</td><td>MCAO</td></tr>
+									<tr><td>Scott Jackson</td><td>MCAO</td></tr>
+									<tr><td>Sheila Vincent</td><td>MCAO</td></tr>
+									<tr><td>Terry Lisansky</td><td>MCAO</td></tr>
 									<tr><td>Britt Lundgren</td><td>University of North Carolina at Asheville</td></tr>
 									<tr><td>Jacob Crawford</td><td>University of North Carolina at Asheville</td></tr>
 									<tr><td>Jacob Stimac</td><td>University of North Carolina at Asheville</td></tr>
